# cardscan

./: .gitignore  CONTRIBUTING.md  README.md  commitlint.config.cjs  package-lock.json  package.json
.github/workflows/: ci.yml
app/mtg_card_scanner/: README.md  pubspec.yaml
app/mtg_card_scanner/android/app/: build.gradle.kts
app/mtg_card_scanner/assets/database/: mtg_cards.sqlite
app/mtg_card_scanner/ios/Runner/: Info.plist
app/mtg_card_scanner/ios/Runner.xcodeproj/: project.pbxproj
app/mtg_card_scanner/lib/: main.dart
app/mtg_card_scanner/lib/app/: app.dart  route_args.dart  routes.dart
app/mtg_card_scanner/lib/core/constants/: app_constants.dart
app/mtg_card_scanner/linux/: CMakeLists.txt
app/mtg_card_scanner/linux/runner/: my_application.cc
app/mtg_card_scanner/macos/Runner.xcodeproj/: project.pbxproj
app/mtg_card_scanner/test/: widget_test.dart
app/mtg_card_scanner/test/support/: channel_mocks.dart  test_fakes.dart
app/mtg_card_scanner/web/: index.html  manifest.json
app/mtg_card_scanner/windows/: CMakeLists.txt
app/mtg_card_scanner/windows/runner/: Runner.rc  main.cpp
docs/: data-pipeline.md
scripts/: install-git-hooks.sh
tools/mtg_data_extractor/: README.md  pyproject.toml  sitecustomize.py
tools/mtg_data_extractor/mtg_data_extractor/: __init__.py
tools/mtg_data_extractor/src/mtg_data_extractor/: __init__.py  cli.py  config.py  exporter.py  models.py  normalize.py  sqlite_reader.py  transformer.py
tools/mtg_data_extractor/tests/: conftest.py  helpers.py  test_cli.py  test_exporter.py  test_normalize.py  test_transformer.py
(+48 files in other folders)
